# benchmarks

./: .gitignore  .gitmodules  Makefile  README.md  base.yaml  benchmark.db  benchmark.py  config.yaml  driver.yaml  run.py  small_config.yaml  test.yaml  test2.html  test4.html
benchmark/: make_graphs.py  make_reports.py  memory_benchmark.py  run_benchmark.py  test_config.py
datasets/: dataset-urls.txt  download_datasets.sh  iris.arff
libraries/: README.txt  ann_install.sh  annoy_install.sh  dlibml_install.sh  download_packages.sh  dtimeout_install.sh  elki_install.sh  flann_install.sh  hlearn_install.sh  install_all.sh  install_r_packages.r  matlab_install.sh  milk_install.sh  mlpack_install.sh  mlpy_install.sh  mrpt_install.sh  nearpy_install.sh  package-urls.txt  r_install.sh  scikit_install.sh  shogun_install.sh  weka_install.sh
methods/R/: adaboost.py  adaboost.r  dtc.py  dtc.r  knc.py  knc.r  lasso.py  lasso.r  lda.py  lda.r  linear_regression.py  linear_regression.r  nbc.py  nbc.r  qda.py  qda.r  random_forest.py  random_forest.r  svc.py  (+3 more)
methods/mlpack/src/: CMakeLists.txt  kmeans_main.cpp  mlp_backward.cpp  mlp_forward.cpp
reports/: benchmark.db  index.html
tests/: benchmark_adaboost.py  benchmark_allkfn.py  benchmark_allknn.py  benchmark_allkrann.py  benchmark_ann.py  benchmark_decision_stump.py  benchmark_decision_tree.py  benchmark_det.py  benchmark_emst.py  benchmark_fastmks.py  benchmark_gmm.py  benchmark_hierarchical_clustering.py  benchmark_hmm_generate.py  benchmark_hmm_loglik.py  benchmark_hmm_train.py  benchmark_hmm_viterbi.py  benchmark_ica.py  benchmark_kernel_pca.py  benchmark_kmeans.py  benchmark_knc.py  benchmark_lars.py  benchmark_lasso.py  benchmark_lda.py  benchmark_linear_regression.py  benchmark_linear_ridge_regression.py  benchmark_local_coordinate_coding.py  benchmark_logistic_regression.py  benchmark_lsh.py  benchmark_nbc.py  benchmark_nca.py  benchmark_nmf.py  benchmark_pca.py  benchmark_qda.py  benchmark_random_forest.py  benchmark_range_search.py  benchmark_sparse_coding.py  benchmark_svm.py  benchmark_svr.py  metrics_unit_test.py  predicted_labels.csv  (+3 more)
util/: convert.py  database.py  graph.py  irc_bot.py  loader.py  log.py  misc.py  mysql.py  parser.py  profiler.py  sqlite.py  system.py  template.py  text.py  timer.py  util.py
(+209 files in other folders)
